--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,10 +1,15 @@
 @use '@angular/material' as mat;
 
-// Theme colors
-$primary: mat.define-palette(mat.$orange-palette, 500);
+// Include the common styles for Angular Material
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes
+$primary: mat.define-palette(mat.$deep-orange-palette, 500);
 $accent: mat.define-palette(mat.$blue-palette, 800);
 $warn: mat.define-palette(mat.$red-palette);
 
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
 $theme: mat.define-light-theme((
   color: (
     primary: $primary,
@@ -15,6 +20,7 @@ $theme: mat.define-light-theme((
   density: 0,
 ));
 
+// Include theme styles for core and each component used in your app.
 @include mat.all-component-themes($theme);
 
 // Global reset
